--- a/2020_4_24.md
+++ b/2020_4_24.md
@@ -1,1 +1,28 @@
+## 測抗體(敦睦艦隊)
+IgM -> IgM/IgG -> IgG  
+初期 /  中期   / 感染結束
 
+## 測抗原
+方法: PCR(4小時), 抗體(False positive)      
+問題: 普篩(False positive % 很高, 群聚)    
+Blocking;  
+
+## Notes
+所有的技術，必須要解釋生物上的意義！
+Buffer, 高鹽讓 aggregate 的 protein 打開(Nacl搶走)  
+要讓protein aggregate ->  抓水
+
+## ELISA
+### Indirect ELISA
+間接法常用於檢測抗體，一般之操作步驟為：  
+1. 將已知之抗原固著於塑膠孔盤上，完成後洗去多餘之抗原  
+Ag coding: 濃度最高50ng, 最低50ng;   
+Blocking: 會不會和1抗、2抗、酵素、Substrate反應, 會不會和Ag反應, 不會被洗掉; Same time as Ag coding;   
+Time: 1~10hrs;    
+Wash: 至少3次;    
+2. 加入待測檢體，檢體中若含有待測之一次抗體，則其會與塑膠孔盤上的抗原進行專一性鍵結  
+1抗濃度"titer"點(optimize); 怎麼稀釋(?) 0.5% BSA skinmilk(or PBS) + Tween20; 
+3. 洗去多餘待測檢體，加入帶有酵素之二次抗體，與待測之一次抗體鍵結  
+和1抗一樣;    
+4. 洗去多餘未鍵結二次抗體，加入酵素受質使酵素呈色，藉儀器（ELISA reader）測定塑膠盤中的吸光值（OD值），以評估有色終產物的含量即可測量待測抗體的含量。  
+洗掉Tween20,!!
