--- a/2020_4_24.md
+++ b/2020_4_24.md
@@ -25,4 +25,4 @@ Wash: 至少3次;
 3. 洗去多餘待測檢體，加入帶有酵素之二次抗體，與待測之一次抗體鍵結  
 和1抗一樣;    
 4. 洗去多餘未鍵結二次抗體，加入酵素受質使酵素呈色，藉儀器（ELISA reader）測定塑膠盤中的吸光值（OD值），以評估有色終產物的含量即可測量待測抗體的含量。  
-洗掉Tween20,!! 不能加入有自由基的東西
+洗掉Tween20,!! 不能加入有自由基的東西(會和H2O2搶，無法放出冷光)
